# MLH-ChatBot

./: .env  .env.example  .gitignore  README.md  chatbot.py  chatbotmodel.h5  chatlog-Oct-18-2021  classes.pkl  config.json  index.js  intents.json  main.py  package-lock.json  package.json  report.20200202.112831.13252.0.001.json  training.py  words.pkl
app/: run.sh
app/backend-django/: .gitignore  Procfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
app/backend-django/api/: apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
app/backend-django/api/migrations/: 0001_initial.py  0002_remove_profile_avatar_url_profile_avatar.py  0003_alter_profile_avatar.py  0004_profile_avatar_x_profile_avatar_y.py  0005_remove_profile_avatar_profile_banner_x_and_more.py  0006_bucketavatarimage_uuid_bucketbannerimage_uuid_and_more.py  0007_profile_last_seen.py  0008_compatibilityscore_compatibilityvote.py
app/backend-django/config/: asgi.py  settings.py  urls.py  wsgi.py
app/backend-django/docs/: schema.md
app/backend-django/frontend_dist/assets/: framer-motion-CIY_yEdr.js  framer-motion-CIY_yEdr.js.map  icons-DepPd247.js.map  index-B-5Wovn2.css  mui-GVOD4HGO.js.map  react-vendor-C4Rk4K4d.js  react-vendor-C4Rk4K4d.js.map
app/frontend-vite/: .gitignore  README.md  eslint.config.js  index.html  netlify.toml  package.json  tailwind.config.ts  tsconfig.json  (+1 more)
commands/: args-info.js
engineering_notebook/: ai-agent-chat-architecture.md  auth0-configuration-guide.md
old-chatbot-stuff/: chatbotmodel.h5  classes.pkl  main.py  words.pkl
(+48 files in other folders)
